# Grid-SIMD

./: .travis.yml  CMakeLists.txt  README.md
include/: GridSIMD.hpp
include/Grid/: Config.h  Config_Cambridge_Wilkes.h
include/Grid/simd/: Grid_vector_types.h
src/allocator/: AlignedAllocator.cc
tests/: CMakeLists.txt  run_tests.sh  test_1_basic_ops.cpp  test_2_OpenMP.cpp  test_3_consts.cpp  test_4_OpenMP.cpp  test_5_OpenMP.cpp  test_6_many_allocations.cpp  test_7_allocations_in_constr.cpp  test_8_allocations_in_constr.cpp
